[package]
name = "compono"
version = "0.0.1"
edition = "2021"
description = "A CLI utility for making component-based HTML presentations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
anyhow = "1.0"
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
#reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
#const_format = { version = "0.2.26", features = [ "const_generics" ] }
#regex = "1"

# optimize for binary size rather than speed and debugging
# <https://stackoverflow.com/a/54842093>
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
