[package]
name = "compono"
version = "0.0.9"
edition = "2021"
description = "A CLI utility for making component-based HTML presentations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
anyhow = "1.0"
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
#reqwest = { version = "0.11", features = ["json"] }
#tokio = { version = "1", features = ["full"] }
git2 = { version = "0.15", features = ["vendored-openssl"] }
walkdir = "2"
#const_format = { version = "0.2.26", features = [ "const_generics" ] }
#regex = "1
glob = "0.3.0"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
zip = "0.6.2"
flate2 = { version = "1.0", features = ["libz-sys"] }
tar = "0.4.38"
rpassword = "7.0"
chrono = "0.4.22"
itertools = "0.10.5"
pathdiff = "0.2.1"
libz-sys = { version = "1.1", features = ["static"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"

# optimize for binary size rather than speed and debugging
# <https://stackoverflow.com/a/54842093>
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
